--- a/package.json
+++ b/package.json
@@ -27,5 +27,13 @@
   "bugs": {
     "url": "https://github.com/HarleyVader/ultravox-bambisleep-chat/issues"
   },
-  "homepage": "https://github.com/HarleyVader/ultravox-bambisleep-chat#readme"
+  "homepage": "https://github.com/HarleyVader/ultravox-bambisleep-chat#readme",
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
+    "ultravox-client": "^0.3.4",
+    "worker-thread": "^1.1.0"
+  }
 }
